# psychosnd

./: CONTRIBUTING.md  README.md  dev-requirements.txt  process.txt  pyproject.toml  requirements.in  requirements.txt  setup.py
src/psychosnd/: __about__.py  __main__.py  gensnd.py  scla.py
test/: test_gensnd.py  test_psychcsv.py  test_scla.py
