[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "psychosnd"
version = "0.0.11"
description = "Psychopy sound analysis scripts"
readme = "README.md"
license = { text = "GPLv3" }
authors = [
    { name = "Gavin Cooper", email = "gjcooper@gmail.com" },
]
keywords = ["Psychopy", "logfile", "sound"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "prespy>=0.0.11",
]

[project.urls]
Homepage = "https://github.com/gjcooper/psychosnd"

[project.scripts]
psych-scla = "psychosnd.__main__:scla_script"
psych-gensnd = "psychosnd.gensnd:gensnd_script"

[tool.hatch.build.targets.wheel]
packages = ["src/psychosnd"]

[dependency-groups]
dev = [
    "coverage",
    "pytest",
    "twine",
]
